# brewanddough

./: .gitignore
backend/: go.mod  main.go
backend/api/: api.go
backend/brew/: brew.go  repository.go  service.go
backend/ingredient/: ingredient.go  repository.go  service.go
backend/models/: brew.go  brew_ingredient.go  ingredient.go
backend/services/: services.go
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/components/bar_chart/: BarChart.tsx
client/src/components/card/: Card.module.css  Card.tsx
client/src/components/form/: Form.module.css  Form.tsx
client/src/containers/brews/: Brews.tsx
client/src/containers/create_brew/: CreateBrew.tsx
client/src/util/: intToDate.ts
server/: Cargo.toml
server/migrations/: 20230221072714_brew.down.sql  20230221072714_brew.up.sql  20230221072932_ingredient.down.sql  20230221072932_ingredient.up.sql  20230221072939_brew_ingredient.down.sql  20230221072939_brew_ingredient.up.sql  20230227073750_brew_instruction.down.sql  20230227073750_brew_instruction.up.sql
server/src/: main.rs  model.rs  repository.rs  router.rs
server/src/api/: brew.rs  ingredient.rs
server/src/model/active_record/: ingredient.rs
server/src/model/entity/: brew.rs
server/src/model/value_object/: brew.rs
server/src/repository/: brew.rs  ingredient.rs
server/src/service/: brew.rs  ingredient.rs
