[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
axum-extra = {version = "0.5.0", features=["spa"]}
serde = {version = "1.0", features = ["derive"] }
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres", "uuid", "time"] }
tokio = {version = "1.25", features= ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs", "trace", "cors"] }
rust-embed="6.4.2"
mime_guess = "2.0.4"
dotenv = "0.15.0"
clap = {version= "4.1.4", features= ["derive", "env"]}
anyhow = "1.0.69"
serde_json = "1.0.93"
